# randomart

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TC-mingw.cmake  brute.sh  examples.md  meson.build  meson_wasm.txt
inc/: ast.h  lang.h  lib.h  mempool.h  node.h
script/: mirrors.ras  starfield.ras  stroke.ras  test.ras  validation.ras  vaporwave.ras
src/: ast.c  lang.c  lib.c  main.c  mempool.c  meson.build  node.c
